<<<<<<< HEAD
<resources>
    <string name="app_name">Parking Armenia</string>
    <string name="tab1">Home</string>
    <string name="tab2">Settings</string>
    <string name="save">Save</string>
    <string name="car_number">Enter your car number</string>
    <string name="oops">Oops</string>
    <string name="emptyinput">Your Input is Empty</string>
    <string name="positivebutton">OK</string>
    <string name="neutralbutton">Cancel</string>
    <string name="reset">Reset</string>
    <string name="palettesaved">Your palette number has been saved</string>
    <string name="resetPalette">Reset</string>
    <string name="suretoreset">Do you want to reset your car palette number?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currentnum">current number is:</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_day">1 day</string>
    <string name="nopayment">No Current Payments</string>
</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Parking Armenia</string>
    <string name="year">1 Օր</string>
    <string name="day">1 Ժամ</string>
    <string name="add_car">Ավելացնել Համար</string>
    <string name="add_license_number">Ավելացնել համար</string>
    <string name="btn_cancel">Չեղարկել</string>
    <string name="neutral_button">Չեղարկել</string>
    <string name="sim_card_error">Չհաջողվեց հաղորդարություն ուղարկել։ Ստուգեք ձեր SIM քարտը</string>
    <string name="btn_delete">ջնջել</string>
    <string name="delete_the_list">ջնջել ամբողջ ցուցակը</string>
    <string name="edit_car">փոփոխել համարը</string>
    <string name="sms_sent_failed">Չհաջողվեց հաղորթագրություն ուղարկել</string>
    <string name="general">Ընդհանուր</string>
    <string name="incorrect_format">Սխալ Ձևաչափ</string>
    <string name="language">Լեզու</string>
    <string name="empty_list_warning">Ձեր համարների ցուցակը դատարկ է։ Ցանկանում ե՞ք համար ավելացնել</string>
    <string name="no_license_yet">Դուք Դեռ Համարներ Չունեք!!</string>
    <string name="positive_button">Լավ</string>
    <string name="pay_day">Վճարե՞լ 1 օր կայանելու համար</string>
    <string name="pay_hour">Վճարե՞լ 1 ժամ կայանելու համար</string>
    <string name="btn_save">Պահպանել</string>
    <string name="sms_sending">Հաղորթագրությունը ուղարկվում է</string>
    <string name="hint_serial">Համար</string>
    <string name="settings">Կարգավորումներ</string>
    <string name="sms_sent">Հաղորթագրությունը ուղարկված է</string>
    <string name="undo_button">Չեղարկել</string>
    <string name="yes_button">ԱՅՈ</string>
    <string name="sms_permission_required">Դուք պետք է թույլ տաք ծրագրին հաղորթագրություններ ուղարկել</string>
    <string name="add_new_number">Նոր Համար Ավելացնել</string>
    <string name="already_exists">Համարը արդեն գոյություն ունի</string>
    <string name="example_hint">Օր․ 77LL001</string>
</resources>
>>>>>>> ver2/feat
