<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/expandableMenu"
        android:layout_width="wrap_content"
        android:layout_height="378dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="276dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimaryDark"
        app:fab_addButtonPlusIconColor="@color/buttonNormal"
        app:fab_addButtonSize="normal"
        app:fab_expandDirection="up"
        app:fab_labelStyle="@style/menu_labels_style_small"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/buttonNormal"
            app:fab_colorPressed="@color/buttonPresses"
            app:fab_icon="@drawable/baseline_message_black_24"
            app:fab_size="mini"
            app:fab_title="@string/day" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/buttonNormal"
            app:fab_colorPressed="@color/buttonPresses"
            app:fab_icon="@drawable/baseline_message_black_24"
            app:fab_size="mini"
            app:fab_title="@string/year" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_add_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/buttonNormal"
            app:fab_colorPressed="@color/buttonPresses"
            app:fab_icon="@drawable/baseline_directions_car_black_24"
            app:fab_size="mini"
            app:fab_title="@string/add_car" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <FrameLayout
        android:id="@+id/carListFrameHolder"
        android:layout_width="286dp"
        android:layout_height="155dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>


</android.support.constraint.ConstraintLayout>